traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: ';' expected but '=' found.
override def run() {def test_fin() {test:Boolean=false; if (getDirection()==Direction.EAST) {left();test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
                                                ^Snake:2: error: ';' expected but '=' found.
  test2:Boolean=false
               ^